#Nmap Changelog ($Id$); -*-text-*-

o [Nping] Bind raw socket to device when possible. This was already done for
  IPv6, but was needed for IPv4 L3 tunnels. [ValdikSS]

o [Ncat] Ncat in connect mode no longer defaults to half-closed TCP
  connections. This makes it more compatible with other netcats. The -k option
  will enable the old behavior. See https://seclists.org/nmap-dev/2013/q1/188
  [Daniel Miller]

o [Nsock][GH#2788] Fix an issue affecting Ncat where unread bytes in the SSL
  layer's buffer could not be read until more data arrived on the socket, which
  could lead to deadlock. [Daniel Miller]

o [Ncat][GH#2422] New Ncat option -q to delay quit after EOF on stdin, the
  same as traditional netcat's -q option. [Daniel Miller]

o [NSE][GH#1014][GH#2616] SSH NSE scripts now catch connection errors thrown by
  the libssh2 Lua binding, providing useful output instead of a backtrace.
  [Joshua Rogers, Daniel Miller]

o Nmap will now allow targets to be specified both on the command line and in
  an input file with -iL. Previously, if targets were provided in both places,
  only the targets in the input file would be scanned, and no notice was given
  that the command-line targets were ignored. [Daniel Miller]

o [GH#1451] Nmap now performs forward DNS lookups in parallel, using the same
  engine that has been reliably performing reverse-DNS lookups for nearly a
  decade. Scanning large lists of hostnames is now enormously faster and avoids
  the unresponsive wait for blocking system calls, so progress stats can be
  shown. In testing, resolving 1 million website names to both IPv4 and IPv6
  took just over an hour. The previous system took 49 hours for the same data
  set! [Daniel Miller]

o [NSE][GH#2571][GH#2572][GH#2622][GH#2784] Various bug fixes in the mssql NSE
  library. [johnjaylward, nnposter]

o [NSE][GH#2925][GH#2917][GH#2924] Testing for acceptance of SSH keys for
  a given username caused heap corruption. [Julijan Nedic, nnposter]
